--- a/.github/workflows/AzDO.yml
+++ b/.github/workflows/AzDO.yml
@@ -16,3 +16,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - uses: Azure/pipelines@v1
+        with:
+          azure-devops-project-url: 'https://pierrc.visualstudio.com/Hybrid-AzDO-GitHub'
+          azure-pipeline-name: 'azure-pipelines.yml' # name of the Azure pipeline to be triggered
+          azure-devops-token: '${{ secrets.AZURE_DEVOPS_TOKEN }}'
+          #azure-pipeline-variables:  '{"variable1": "value1", "variable2": "value2"}' # optional stringified json
